--- a/_posts/2016-01-04-tooling.markdown
+++ b/_posts/2016-01-04-tooling.markdown
@@ -1,36 +1,100 @@
 ---
-title:  "Tooling – standard and npm"
+title:  "Tooling – Prettier and npm"
 ---
 
 Before we can introduce JSX to React, we are going to have to send it through a compilation step. So we are going to take a brief repose from React here to start working on our tooling a bit.
 
-## standard
+## Prettier
 
-Let's start with the easiest to start with right now: standard.
+[Prettier][prettier] is an amazing tool from the brain of [James Long][jlongster]. James, like many of us, was sick of having to constantly worried about the style of his code: where to stick indents, how many, when to break lines, etc etc. Coming from languages like Go, Reason, or Elm where all that is just taken care of by the tooling for the language, this quickly wears. James did something about it and made a tool to take care of it: Prettier.
 
-standard is a linting tool. Specifically, the executable version of standard that you get when you <code>yarn global add standard</code> is a wrapper around a pre-configured [eslint][eslint-docs]. If you are unfamiliar with linting tools (like jshint, jslint, jscs) the basic gist is that this tool programatically checks for certain violations of code style in your code. A common (and arguably the most useful) check that it does is make sure you have no unused variables and that you make use of no undeclared variables in your code. A common reason to trip either of those rules is that misspelled a variable somewhere. There are dozens of other checks standard does: check them out [here][standard-checks].
+Prettier is a really fancy pretty printer. It takes the code you write, breaks it down in to an abstract syntax tree (AST) which is just a representation of your code. It then takes that AST, throws away all of your code style you made and prints it back out using a predefined style. While this sounds a little scary, it's actually really cool. Since you no longer have control of the style of your code, you no longer have to think at all about it. Your code is always consistent, as is the code from the rest of your team. No more bikeshedding!! As I like to put it: if your brain is a processor, you get to free up the thread of your brain that worries about code styles and readability: it just happens for you. Don't like semicolons? Don't write them! It puts them in for you. I _love_ Prettier.
 
-A note on standard, since it inevitably causes controversy. standard is a set of eslint rules that is meant to not to be configurable to totally sidestep the conversation of what rules to include and what not to. It's meant to be a step in the direction of a standard format in the JavaScript community, much akin to how the Go community has standardized on one. Perhaps the most controversial rule in standard is no semicolons. It's okay to not use semicolons in JS. Really. I promise. It's not slower and it won't introduce crazy bugs. It's okay to use them too! It doesn't particularly matter. However, in this workshop, you code won't pass lint if you use semicolons. If you _insist_ that you need your semicolons, you can use the package [semistandard][semistandard]. But give standard a shot. You may like it.
+Need to tool around a bit with it before you trust it? [Go here][prettier-playground]. You can see how it works.
 
-That being said, we _will_ introducing new rules for our JSX since we want some rules added to enforce good "Reactful" code.
+Let's go integrate this into our project. It's pretty easy (lol.)
 
-So, head to your terminal and navigate to the directory of the project. Given that standard is preconfigured to recursively check all js and jsx files recursively in a project and leave out some sane defaults (it doesn't check node_modules/) you should be able to just run <code>standard</code> from your terminal and see if you have any issues. If you do, go fix them! If you feel so inclined, you can use [standard-format][standard-format] to have your code auto-fixed for you. I've found it sometimes has some derpy indentation but you may have better results.
+Either install Prettier globally `yarn global add prettier` (I'm using v0.22 as of writing) or replace when I run `prettier` with (from the root of your project) `./node_modules/.bin/prettier`. From there, run `prettier script.js`. This will output the formatted version of your file. If you want to actually write the file, run `prettier --write script.js`. Go check script.js and see it has been reformatted a bit. I will say for non-JSX React, prettier makes your code less readable. Luckily Prettier supports JSX! We'll get to that shortly.
 
-## npm scripts
+Prettier has a few configurations but it's mostly meant to be a tool everyone uses and doesn't argue/bikeshed about the various code style rules. [Here they are][prettier-options]. I'm going to use a print-width of 120 and single quotes because I like that better but you're welcome to leave it as-is too. Prettier also can understand [flow][flow] if you switch the parser but we're not going to worry about that. TypeScript support is coming.
 
-One of the nice convenience that npm allows you is its scripts features. If you work on a team or an open source project, it's a great way to standardize how things are done in your project. Even if it's just you, it's an easy way to shorten commands. So go to your package.json and add:
+## npm/Yarn scripts
+
+So it can be painful to try to remember the various CLI commands to run on your project, especially with Prettier because it doesn't have a config object yet (they're making one.) npm/Yarn scripts to the rescue! You can put CLI commands into it and then run the name of the tag and it'll run that script. Let's go see how that works. Put the following into your package.json.
 
 ```json
 "scripts": {
-    "lint": "standard"
+	"format": "prettier --write --single-quote --print-width=120 \"!node_modules/ **/*.js\""
 },
 ```
 
-Once in your package.json, now you can go to your terminal and run <code>npm run lint</code> and it will run standard for you. This isn't a big right now but we'll start chaining our whole testing process together and we won't have to remember the complex stuff we're doing each time. We'll have several scripts in here and it quickly becomes _very_ convenient.
+Now you can run `yarn format` or `npm run format` and it will run that command. This means we don't have to remember that mess of a command and just have to remember format. Nice, right? We'll be leaning on this a lot during this course.
 
-Since all our tests, lints, and builds will be done through npm scripts (which are just commands piped to the terminal) we don't need any tools like Grunt, Gulp, or the like. Anyone who has ever maintained a Gruntfile knows why this is such a big deal. Not to disparage task running tools though; if you have a complex build they quickly are worth their weight in gold. Our builds will be simple and so a simple tool serves nicely.
+## Editor Integration
 
-[eslint-docs]: http://eslint.org/
-[standard-checks]: https://github.com/feross/standard/blob/master/RULES.md#javascript-standard-style
-[semistandard]: https://github.com/Flet/semistandard
-[standard-format]: https://github.com/maxogden/standard-format
+This is all fun, but it's very manual. Let's go make this run automatically on save. This makes the whole process super seamless. For your editor's instructions, [go here][prettier-ide]. Once you've enabled it and put it run on autosave then we're good to go! Here's the config I used for Sublime:
+
+```json
+{
+	"prettier_cli_path": "/Users/brholt/.nvm/versions/node/v6.9.5/bin/prettier",
+	"node_path": "/Users/brholt/.nvm/versions/node/v6.9.5/bin/node",
+	"auto_format_on_save": true
+	"prettier_options": {
+		"parser": "babylon",
+		"singleQuote": true,
+		"printWidth": 120,
+	}
+}
+```
+
+## ESLint
+
+On top of Prettier which takes of all the formatting, you may want to enforce some code styles which pertain more to usage: for example you may want to force people never use `with` which is valid JS but illadvised to use. ESLint comes into play here. It will lint for this problems. There are dozens of present configs for ESLint and you're welcome to use any one of them. The Airbnb config is very popular, as is the standard config (which I teach in previous versions of this class.) We're going to use the Airbnb one since it's likely the most popular one. Let's create an `.eslintrc.json` file to start linting our project.
+
+Create this file called `.eslintrc.json`.
+
+```json
+{
+  "extends": [
+    "airbnb",
+    "prettier",
+    "prettier/react"
+  ],
+  "plugins": [
+    "react",
+    "jsx-a11y",
+    "import",
+    "prettier"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2016,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
+  },
+  "rules": {
+    "prettier/prettier": "error"
+  }
+}
+```
+
+This is a combination of the recommended configs of Airbnb and Prettier. This will lint for both normal JS stuff as well as JSX stuff. Run `eslint script.js` now and you should see we have a few errors. Run it again with the `--fix` flag and see it will fix some of it for us! Go fix the rest of your errors and come back. Let's go add this to our npm scripts.
+
+```json
+"lint": "eslint **/*.js"
+```
+
+You can linting to your editor too but I'll leave that to you. It can be a bit finnicky to get going.
+
+[jlongster]: https://twitter.com/jlongster
+[prettier]: https://github.com/prettier/prettier
+[prettier-playground]: https://prettier.github.io/prettier/
+[prettier-options]: https://github.com/prettier/prettier#api
+[flow]: https://flow.org/
+[prettier-ide]: https://github.com/prettier/prettier#editor-integration
